fixed mobile stretch banenr

--- a/static/css/demo.css
+++ b/static/css/demo.css
@@ -205,13 +205,21 @@ ul.share-buttons li{
 
 
 @media screen and (max-width: 25em) {
+	#dorm-banner-logo {
+		width: auto;
+		max-width: 330px;
+	    padding: 5px;
+	    margin-right:-130px;
+	    height:55px	;
+
+	}
 	#share-box{
 		text-align:center;
 		position: relative;
 		width: 100%;
 		height: 25px;
 		background: white;
-		top: -5px;
+		top: -1px;
 		left: 0;
 	}
 	#social-buttons {
